--- a/tweet_app/templates/tweet_app/signup_page.html
+++ b/tweet_app/templates/tweet_app/signup_page.html
@@ -17,6 +17,36 @@
               <form method="post">
                 {% csrf_token %}
                 <div class="form-group">
+                    <label for="username">username</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      name="username"
+                      placeholder="Enter your username"
+                      required
+                    />
+                </div>
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      name="name"
+                      placeholder="Enter your name"
+                      required
+                    />
+                </div>
+                <div class="form-group">
+                    <label for="date-of-birth">date-of-birth</label>
+                    <input
+                      type="date"
+                      class="form-control"
+                      name="date_of_birth"
+                      placeholder="Enter your date of birth"
+                      required
+                    />
+                </div>
+                <div class="form-group">
                   <label for="email">Email</label>
                   <input
                     type="text"
@@ -41,8 +71,8 @@
             </div>
           </div>
           <div class="d-flex d-row mx-4 my-3">
-            <p>don't have an account ?</p>
-            <a href="{% url 'signup_page' %}">SignUp</a>
+            <p>already have an account ?</p>
+            <a href="{% url 'login_page' %}">Login</a>
           </div>
         </div>
 
