--- a/tweet_app/templates/tweet_app/profile_page.html
+++ b/tweet_app/templates/tweet_app/profile_page.html
@@ -46,7 +46,7 @@
         />
       </div>
       <div
-        class="d-flex flex-column my-4 rounded justify-content-between"
+        class="d-flex flex-column my-4 rounded justify-content-start"
         style="width: 40%; background-color: blanchedalmond"
       >
         <div class="d-flex flex-column">
@@ -57,6 +57,43 @@
         <div class="d-flex flex-row justify-content-around align-items-between my-2 mx-1">
           <p>following {{following_count}}</p>
           <p>followers {{followers_count}}</p>
+        </div>
+        <div class="d-flex justify-content-center align-items-center">
+
+          <button class="btn btn-primary" data-target="#profileModal{{request.user.id}}" data-toggle="modal">Edit profile</button>
+
+          <div class="modal modal-lg fade" id="profileModal{{request.user.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h4>edit profile</h4>
+                </div>
+                <form method="post" id="profile-form-{{request.user.id}}" action="{% url 'edit_profile' %}">
+                  {% csrf_token %}
+                  <div class="modal-body">
+                    <div class="form-group d-flex flex-row">
+                      <label for="message-text mx-2" class="col-form-label overflow-label" >new username:</label>
+                      <input class="form-control mx-2" id="message-text" type="text" name="comment" placeholder="{{request.user.username}}"></input>
+                      <label for="message-text mx-2" class="col-form-label">new name:</label>
+                      <input class="form-control mx-2" id="message-text" type="text" name="comment" placeholder="{{request.user.name}}"></input>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <form method="post" action="{% url 'edit_profile' %}">
+                      {% csrf_token %}
+                      <button type="submit" class="btn btn-primary" data-target="#profileModal{{request.user.ir}}" 
+                      data-toggle="modal">Apply </button>
+                    </form>
+                    <input type="hidden" name="user_id" value="{{request.user.id}}">
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>  
+
+
+
         </div>
       </div>
     </div>
