--- a/tweet_app/templates/tweet_app/profile_page.html
+++ b/tweet_app/templates/tweet_app/profile_page.html
@@ -9,11 +9,15 @@
       style="width: 100%; height: 100%"
     >
       <div class="d-flex justify-content-center align-items-center" style="width: 60%">
-        <img
-          class="rounded"
-          src="{{request.user.profile_picture_path.url}}"
-          style="width: 80%; height:80%;"
-        />
+        {% if request.user.profile_picture_path %}
+          <img
+            class="rounded"
+            src="{{request.user.profile_picture_path.url}}"
+            style="width: 80%; height:80%;"
+          />
+        {% else %}
+          <img class="rounded-circle mx-3" src="https://cdn.icon-icons.com/icons2/3065/PNG/512/profile_user_account_icon_190938.png" style="width:80%; height:80%;"/>
+        {% endif %}
       </div>
       <div
         class="d-flex flex-column my-4 rounded justify-content-between"
@@ -39,11 +43,15 @@
       style="width: 100%; height: 100%"
     >
       <div class="d-flex justify-content-center align-items-center" style="width: 60%">
-        <img
-          class="rounded"
-          src="{{request.user.profile_picture_path.url}}"
-          style="width: 80%; height:80%;"
-        />
+        {% if request.user.profile_picture_path %}
+          <img
+            class="rounded"
+            src="{{request.user.profile_picture_path.url}}"
+            style="width: 80%; height:80%;"
+          />
+        {% else %}
+          <img class="rounded-circle mx-3" src="https://cdn.icon-icons.com/icons2/3065/PNG/512/profile_user_account_icon_190938.png" style="width:80%; height:80%;"/>
+        {% endif %}
       </div>
       <div
         class="d-flex flex-column my-4 rounded justify-content-start"
@@ -62,20 +70,23 @@
 
           <button class="btn btn-primary" data-target="#profileModal{{request.user.id}}" data-toggle="modal">Edit profile</button>
 
-          <div class="modal modal-lg fade" id="profileModal{{request.user.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal fade" id="profileModal{{request.user.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
                   <h4>edit profile</h4>
                 </div>
-                <form method="post" id="profile-form-{{request.user.id}}" action="{% url 'edit_profile' %}">
+                <form method="post" id="profile-form-{{request.user.id}}" action="{% url 'edit_profile' %}" enctype="multipart/form-data">
                   {% csrf_token %}
                   <div class="modal-body">
                     <div class="form-group d-flex flex-row">
-                      <label for="message-text mx-2" class="col-form-label overflow-label" >new username:</label>
-                      <input class="form-control mx-2" id="message-text" type="text" name="comment" placeholder="{{request.user.username}}"></input>
-                      <label for="message-text mx-2" class="col-form-label">new name:</label>
-                      <input class="form-control mx-2" id="message-text" type="text" name="comment" placeholder="{{request.user.name}}"></input>
+                      <label for="new_username" class="col-form-label " style="white-space: nowrap;">new username:</label>
+                      <input class="form-control mx-2" id="new_username" type="text" name="username" value="{{request.user.username}}"></input>
+                      <label for="new_name" class="col-form-label" style="white-space: nowrap;">new name:</label>
+                      <input class="form-control mx-2" id="new_name" type="text" name="name" value="{{request.user.name}}"></input>
+                    </div>
+                    <div class="d-flex">
+                      <input type="file" name="profile_picture_path" accept="image/*, video/*" value="{{request.user.profile_picture_path}}">
                     </div>
                   </div>
                   <div class="modal-footer">
@@ -85,7 +96,7 @@
                       <button type="submit" class="btn btn-primary" data-target="#profileModal{{request.user.ir}}" 
                       data-toggle="modal">Apply </button>
                     </form>
-                    <input type="hidden" name="user_id" value="{{request.user.id}}">
+                    <input type="hidden" name="id" value="{{request.user.id}}">
                   </div>
                 </form>
               </div>
@@ -107,11 +118,15 @@
       <div class="card-header">
         <div class="d-flex justify-content-start justify-content-between">
           <div class="d-flex align-items-start">
+            {% if request.user.profile_picture_path %}
             <img
-              class="rounded-circle"
-              src="{{tweet.user.profile_picture_path.url}}"
-              style="width: 50px; height: 50px"
+              class="rounded"
+              src="{{request.user.profile_picture_path.url}}"
+              style="width: 50px; height:50px;"
             />
+          {% else %}
+            <img class="rounded-circle mx-3" src="https://cdn.icon-icons.com/icons2/3065/PNG/512/profile_user_account_icon_190938.png" style="width:50px; height:50px;"/>
+          {% endif %}
             <div class="mx-3">
               <h5 class="m-0">{{tweet.user.username}}</h5>
               <p class="m-0">{{tweet.timestamp|timesince}}</p>
@@ -306,11 +321,16 @@
                         id="comments_{{tweet.tweet_id}}"
                       >
                         <div class="d-flex flex-row align-items-center">
-                          <img
-                            class="rounded-circle"
-                            src="{{comment.user.profile_picture_path.url}}"
-                            style="width: 50px; height: 50px"
-                          />
+
+                          {% if request.user.profile_picture_path %}
+                            <img
+                              class="rounded-circle"
+                              src="{{comment.user.profile_picture_path.url}}"
+                              style="width: 50px; height: 50px"
+                            />
+                          {% else %}
+                            <img class="rounded-circle mx-3" src="https://cdn.icon-icons.com/icons2/3065/PNG/512/profile_user_account_icon_190938.png" style="width:50px; height:50px;"/>
+                          {% endif %}
                           <div class="d-flex flex-column">
                             <h6 class="mx-2 p-0 my-0">{{comment.user.name}}</h6>
                             <p class="text-muted mx-2 p-0 my-0">
