--- a/tweet_app/templates/tweet_app/home.html
+++ b/tweet_app/templates/tweet_app/home.html
@@ -97,6 +97,9 @@
               <h4>
                 <a href="{% url 'profile_page' %}" class="text-decoration-none" style="color:white;">profile</a>
               </h4>
+              <h4>
+                <a href="{% url 'recom_people' %}" class="text-decoration-none" style="color:white;">recommendations</a>
+              </h4>
             </div>
             
 
@@ -233,7 +236,7 @@
                 <div class="d-flex align-items-start">
 
                   {% if request.user.profile_picture_path %}
-                    <img class="rounded-circle mx-3" src="{{tweet.user.profile_picture_path.url}}" style="width:60px; height:60px;"/>
+                    <img class="rounded mx-3" src="{{tweet.user.profile_picture_path.url}}" style="width:60px; height:60px;"/>
                   {% else %}
                     <img class="rounded-circle mx-3" src="https://cdn.icon-icons.com/icons2/3065/PNG/512/profile_user_account_icon_190938.png" style="width:60px; height:60px;"/>
                   {% endif %}
