--- a/tweet_app/templates/tweet_app/profile_page.html
+++ b/tweet_app/templates/tweet_app/profile_page.html
@@ -28,16 +28,56 @@
           <h6 class="mx-2 text-muted" style="font-size: 3vw">@{{request.user.username}}</h6>
           <h6 class="mx-2 text-muted" style="font-size: 2vw">joined {{date_joined}}</h6>
         </div>
-        <div class="d-flex flex-row justify-content-around align-items-between my-2 mx-1">
-          <p style="font-size: 2vw">following {{following_count}}</p>
-          <p style="font-size: 2vw">followers {{followers_count}}</p>
+        <div class="d-flex flex-row justify-content-around align-items-between mx-1">
+          <p class="mb-1" style="font-size: 2vw;">following {{following_count}}</p>
+          <p class="mb-1" style="font-size: 2vw">followers {{followers_count}}</p>
+        </div>
+        <div class="d-flex justify-content-center align-items-center">
+
+          <button class="btn btn-primary" data-target="#profileModal{{request.user.id}}" data-toggle="modal" style="font-size: 2.8vw; width:20vw; height:7vw;">Edit profile</button>
+
+          <div class="modal fade" id="profileModal{{request.user.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h4>edit profile</h4>
+                </div>
+                <form method="post" id="profile-form-{{request.user.id}}" action="{% url 'edit_profile' %}" enctype="multipart/form-data">
+                  {% csrf_token %}
+                  <div class="modal-body">
+                    <div class="form-group d-flex flex-row">
+                      <label for="new_username" class="col-form-label " style="white-space: nowrap;">new username:</label>
+                      <input class="form-control mx-2" id="new_username" type="text" name="username" value="{{request.user.username}}"></input>
+                      <label for="new_name" class="col-form-label" style="white-space: nowrap;">new name:</label>
+                      <input class="form-control mx-2" id="new_name" type="text" name="name" value="{{request.user.name}}"></input>
+                    </div>
+                    <div class="d-flex">
+                      <input type="file" name="profile_picture_path" accept="image/*, video/*" value="{{request.user.profile_picture_path}}">
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <form method="post" action="{% url 'edit_profile' %}">
+                      {% csrf_token %}
+                      <button type="submit" class="btn btn-primary" data-target="#profileModal{{request.user.ir}}" 
+                      data-toggle="modal">Apply </button>
+                    </form>
+                    <input type="hidden" name="id" value="{{request.user.id}}">
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>  
+
+
+
         </div>
       </div>
     </div>
   </div>
 
 
-  <div class="card shadow d-none d-md-block" id="uniqueDiv" style="width: 90%; height: 15vw;">
+  <div class="card shadow d-none d-md-block" id="uniqueDiv" style="width: 90%; height: 17vw;">
     <div
       class="d-flex flex-row justify-content-start"
       style="width: 100%; height: 100%"
@@ -68,7 +108,8 @@
         </div>
         <div class="d-flex justify-content-center align-items-center">
 
-          <button class="btn btn-primary" data-target="#profileModal{{request.user.id}}" data-toggle="modal">Edit profile</button>
+          <button class="btn btn-primary" data-target="#profileModal{{request.user.id}}" data-toggle="modal" 
+          style="font-size: 1.2vw; width:8vw; height:2.7vw;" >Edit profile</button>
 
           <div class="modal fade" id="profileModal{{request.user.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
