--- a/tweet_app/templates/tweet_app/profile_page.html
+++ b/tweet_app/templates/tweet_app/profile_page.html
@@ -1,7 +1,7 @@
 
 
 {% extends 'tweet_app/home.html' %} {% block content %}
-<div class="d-flex flex-column overflow-auto" style="width:700px;">
+<div class="d-flex flex-column overflow-auto m-0 p-0" style="width:700px; height:1000px;">
 
   <div class="card shadow d-md-none d-md-block" id="uniqueDiv" style="width: 90%; height: 40vw;">
     <div
@@ -152,7 +152,7 @@
   </div>
   <div
     class="d-flex flex-column overflow-auto"
-    style="height: 30%; width: 95%;"
+    style="height: 95%; width: 95%;"
   >
     {% for tweet in tweets reversed%}
     <div class="card rounded shadow">
