--- a/tweet_app/templates/tweet_app/home.html
+++ b/tweet_app/templates/tweet_app/home.html
@@ -264,7 +264,7 @@
               <div class="d-flex justify-content-start">
                 <div class="d-flex align-items-start">
 
-                  {% if request.user.profile_picture_path %}
+                  {% if tweet.user.profile_picture_path %}
                     <img class="rounded mx-3" src="{{tweet.user.profile_picture_path.url}}" style="width:60px; height:60px;"/>
                   {% else %}
                     <img class="rounded-circle mx-3" src="https://cdn.icon-icons.com/icons2/3065/PNG/512/profile_user_account_icon_190938.png" style="width:60px; height:60px;"/>
@@ -282,7 +282,7 @@
                 <p>{{tweet.text}}</p>
               </div>
               {% if tweet.image %}
-                <img src="{{tweet.image.url}}" style="width:100%;"/>
+                <img src="{{tweet.image.url}}" style="width:100%;" loading="lazy"/>
               {% endif %}
             </div>
             <div class="card-footer">
@@ -626,6 +626,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script> 
 
     <script src="{% static 'js/script.js' %}" ></script>
+    <script src="{% static 'js/infinite.min.js' %}" ></script>
+    <script src="{% static 'js/jQuery.waypoints.min.js' %}" ></script>
+    
 
   </body>
 </html>
